properly handle type parameter "inheritance"